== Rolled over to ChangeLog-2012-10-02 ==